--- a/html_css/responsive_design/index.html
+++ b/html_css/responsive_design/index.html
@@ -5,19 +5,24 @@
 		<meta charset="UTF-8">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jordan Shedlock</title>
-		<!-- Load stylesheets based on viewport  -->
+		<title>Vladimir Putin</title>
+		<!-- Intended to use a column drop layout: 3 on large screen, 2 on medium, 1 on small  -->
+		
 		<link rel="stylesheet" type="text/css" href="main.css">
+		
 		<link rel="stylesheet" type="text/css" media="(max-width: 500px)" href="small.css">
-		<link rel="stylesheet" type="text/css" media="(min-width: 500px) and (max-width: 700px)" href="medium.css">
+		
+		<link rel="stylesheet" type="text/css" media="(min-width: 500px) and (max-width: 900px)" href="medium.css">
+		
+
 		<!-- Load in custom fonts -->
-		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 		<header>
-			<h1 id="site-title">Jordan Shedlock</h1>
+			<h1 id="site-title">Vladimir Putin</h1>
 			<nav id="navigation">
 				<a class="nav-button" href="#">Home</a>
 				<a class="nav-button" href="#projects">Projects</a>
@@ -26,31 +31,42 @@
 		</header>
 
 		<div class="main-container">
-
-			<h3 class="project-title">IOLab Final Project</h3>
 			<div id="project-1" class="project">
+			<h3 class="project-title">Return of the Crimea</h3>
+			
 				<div class="project-image">
-					<img src="http://placehold.it/450x300" alt="beautiful scenery of the wild">
+					<img src="vezhlivye.jpg" alt="polite green people">
 				</div>
 				<div class="project-detail">
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+					<p>In March 2014, I staged a plausibly deniable bloodless overthrow of a foreign territory.  This was done in order to protect ethnic Russians, return a historically significant territory to its Russian homeland (redressing the historical injustice perpetrated by Khrushchev in 1954), secure Russia's military presence in the Black Sea, and prevent fascist chaos.  The restored territory brought Russia seven fixer-upper defense plants, a formerly secret submarine base, significant wine-growing regions, and vast growth potential for energy infrastructure and tourism development.</p>
 				</div>
 			</div>
 
-			<h3 class="project-title">Tweetday</h3>
 			<div id="project-2" class="project">
+			<h3 class="project-title">2014 Sochi Olympics</h3>
+			
 				<div class="project-image">
-					<img src="http://placehold.it/450x300" alt="beautiful scenery of the wild">
+					<img src="sochi-01.jpg" alt="Sochi opening ceremony">
 				</div>
 				<div class="project-detail">
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+					<p>In February 2014, the XXII Winter Olympic Games were held in Sochi, Russia.  This event was a triumph of civil, financial, and information engineering.  Not only did I successfully stage a winter sports spectacle in one of the few sub-tropical zones in a country whose lands stretch into the Arctic and features some of the coldest inhabited places on Earth, but the development of facilities for the Games provided a flexible financial vehicle for enriching Moscow real estate developers and construction contractors. </p>
 				</div>
 			</div>
+
+			<div id="project-3" class="project">
+			<h3 class="project-title">Protection of Syrian Statehood</h3>
+
+				<div class="project-image">
+					<img src="syria-01.jpg" alt="syrian flag">
+				</div>
+				<div class="project-detail">
+					<p>Since March 2011, I have supported the brotherly nation of Syria in its fight against NATO-backed terrorist aggression, seeking to preserve its statehood and territorial integrity, as well as preserving a Russian presence on the Mediterranean.  I have provided political coverage in the UN and military backing on Syrian territory. In September 2013, I engineered the peaceful elimination of Syria's chemical weapons, depriving the aggressive US President Obama of a pretext for an invasion.</p>
+				</div>
 
 		</div>
 
 		<footer>
-			<span>Contact me: jshedlock@berkeley.edu</span>
+			<span id="contactinfo">Contact me: <a href="vladdy@ischool.berkeley.edu">vladdy@ischool.berkeley.edu</a></span>
 		</footer>
 	</body>
 </html>
